Fix grammatic problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "cSpell.language": ",es"
+    "cSpell.enableFiletypes": ["dart"],
+    "cSpell.enabled": true,
+    "cSpell.words": [
+        "Stateless",
+        "dart",
+        "extends",
+        "flutter",
+        "picture",
+        "styled"
+    ]
 }
