--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
     line_icons: ^2.0.1
-
+    get:
 dev_dependencies:
     flutter_test:
         sdk: flutter
