--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,11 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
     line_icons: ^2.0.1
+    font_awesome_flutter: ">= 4.7.0"
     get:
+dependency_overrides:
+    font_awesome_flutter:
+        path: /home/ulisesr/Documents/developments/flutter/libraries/font_awesome_flutter
 dev_dependencies:
     flutter_test:
         sdk: flutter
