Revert "Add home tabs main"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,3 @@
 {
-    "cSpell.enableFiletypes": ["dart"],
-    "cSpell.enabled": true,
-    "cSpell.words": [
-        "Stateless",
-        "dart",
-        "extends",
-        "flutter",
-        "picture",
-        "styled"
-    ]
+    "cSpell.language": ",es"
 }
