Skeleton to make ac page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.enabled": true,
     "cSpell.words": [
         "Stateless",
+        "appbar",
         "dart",
         "extends",
         "flutter",
