--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,7 @@
 include: package:very_good_analysis/analysis_options.yaml
 linter:
     rules:
+        always_put_required_named_parameters_first: true
         public_member_api_docs: true
         close_sinks: true
         one_member_abstracts: true
